ShowTimes can now be added - Search Showtimes according to Theatre and Movie

--- a/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Shared/_AdminLayout.cshtml
@@ -24,7 +24,7 @@
             <div class="sidebar-heading text-center py-4 fs-4 fw-bold border-bottom">🎬 Admin Panel</div>
             <div class="list-group list-group-flush flex-grow-1">
                 <a asp-controller="Admin" asp-action="Index" class="list-group-item list-group-item-action text-white bg-dark">🏠 Dashboard</a>
-                <a asp-controller="ShowTime" asp-action="Index" class="list-group-item list-group-item-action text-white bg-dark">⏳ Manage ShowTimes</a>
+                <a asp-controller="ShowTime" asp-action="ShowTimeManagement" class="list-group-item list-group-item-action text-white bg-dark">⏳ Manage ShowTimes</a>
                 <a asp-controller="Reservation" asp-action="Index" class="list-group-item list-group-item-action text-white bg-dark">🎟️ Manage Reservations</a>
                 <a asp-controller="Movie" asp-action="ManageMovie" class="list-group-item list-group-item-action text-white bg-dark">🎥 Manage Movies</a>
                 <a asp-controller="Theatre" asp-action="ManageTheatre" class="list-group-item list-group-item-action text-white bg-dark">🏢 Manage Theatres</a>
@@ -64,7 +64,7 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"></script>
-
+    
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.esm.min.js"></script>
