EditShowTime view added with methods

--- a/CinemaTicketingSystem.Web/Views/ShowTime/ShowTimeManagement.cshtml
+++ b/CinemaTicketingSystem.Web/Views/ShowTime/ShowTimeManagement.cshtml
@@ -90,7 +90,7 @@
 
         // Edit Show Time
         function editShowTime(showTimeId) {
-            window.location.href = `/ShowTime/Edit?showTimeId=${showTimeId}`;
+            window.location.href = `/ShowTime/EditShowTime?showTimeId=${showTimeId}`;
         }
 
         // Delete Show Time
