--- a/CinemaTicketingSystem.Web/Views/ShowTime/EditShowTime.cshtml
+++ b/CinemaTicketingSystem.Web/Views/ShowTime/EditShowTime.cshtml
@@ -9,6 +9,7 @@
 
     <div class="card shadow-sm rounded-4 p-4">
         <form asp-action="EditShowTime" method="post" enctype="multipart/form-data">
+            <input asp-for="ShowTimeId" hidden />
             <!-- Show Date -->
             <div class="row g-4 mb-3">
                 <div class="col-md-6">
