logic added for show time search on reservation page

--- a/CinemaTicketingSystem.Web/Views/Movie/Details.cshtml
+++ b/CinemaTicketingSystem.Web/Views/Movie/Details.cshtml
@@ -19,7 +19,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel tortor orci. Aenean eget dolor sit amet odio tristique malesuada.
             </p>
             <div class="d-grid gap-2 d-md-flex">
-                <a asp-controller="Reservation" asp-action="Create" asp-route-id="@Model.MovieId" class="btn btn-success btn-lg">🎟️ Book Now</a>
+                <a asp-controller="Reservation" asp-action="CreateReservation" asp-route-movieId="@Model.MovieId" class="btn btn-success btn-lg">🎟️ Book Now</a>
             </div>
         </div>
     </div>
